--- a/index.html
+++ b/index.html
@@ -1,32 +1,11 @@
 <html>
 	<head>
 		<style>
-			img {
-				/*position: absolute;
-				margin: auto;
-				left: 0; 
-				right: 0;
-				top: 0;
-				bottom: 0;*/ 
-				width: 500;
-			}
-
-			h1 {
-				font-size: 100;
-			}
-			body {
-				text-align: center;
-			}
 		</style>
 	</head>
 	<body>
-		<img src="./adam.jpg">
-		<h1>Adam Fartlever</h1>
-		<ul>
-			<li>Loves dogs</li>
-			<li>Can make a mean lasagna</li>
-			<li>Favorite movie: The Notebook (obviously)</li>
-			<li>Favorite actress: Julia Roberts (obviously)</li>
-		</ul>
+		<h1>Brighter Goods</h1>
+		<p>Staying clean is cool.</p>
+		
 	</body>
 </html>
