--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		</style>
 	</head>
 	<body>
-		<h1>Brighter Goods</h1>
-		<p>Staying clean is cool.</p>
-		
+		<h1>You clean up well ;).</h1>
 	</body>
 </html>
