--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">brighter</h1>
+            <h1 class="cover-heading">😎</h1>
+	    <p>You clean up well </p>
           </div>
 
           <div class="mastfoot">
            <div class="inner">
+		<small>brighter goods co.</small>
            </div>
          </div>
 
