--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">😎</h1>
-	    <p>You clean up well </p>
+            <h1 class="cover-heading">brighter</h1>
           </div>
 
           <div class="mastfoot">
            <div class="inner">
-		<small>brighter goods co.</small>
            </div>
          </div>
 
